unpackaged/main/default/objects/Contact/fields/Accepts_Online_Payments__c.field-meta.xml
<CustomField>
    <fullName>Accepts_Online_Payments__c</fullName>
    <description>This field is used to identify whether the prospect accepts payments. It is mapped from the Lead to Opportunity upon conversion, and is used to help tailor the sales experience.</description>
    <inlineHelpText>Does the prospect currently accept online payments?</inlineHelpText>
    <label>Accepts Online Payments</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>