unpackaged/main/default/objects/Contact/fields/Account_Name_Formula__c.field-meta.xml
<CustomField>
    <fullName>Account_Name_Formula__c</fullName>
    <description>Formula to pull in account name. Currently being used for integration with Intercom as it does not support lookup fields.</description>
    <formula>Account.Name</formula>
    <label>Account Name</label>
    <type>Text</type>
</CustomField>