unpackaged/main/default/objects/Contact/fields/Add_User_to_Trial__c.field-meta.xml
<CustomField>
    <fullName>Add_User_to_Trial__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Add User to Trial</label>
    <type>Checkbox</type>
</CustomField>