unpackaged/main/default/objects/Contact/fields/Added_Date__c.field-meta.xml
<CustomField>
    <fullName>Added_Date__c</fullName>
    <inlineHelpText>Date that Contact (User) was added to AppFolio Property Manager or MyCase app; synced from respective app nightly.</inlineHelpText>
    <label>Added Date</label>
    <type>Date</type>
</CustomField>