unpackaged/main/default/objects/Contact/fields/Additional_E_Mail_1__c.field-meta.xml
<CustomField>
    <fullName>Additional_E_Mail_1__c</fullName>
    <description>Label updated R1916236</description>
    <label>Personal Email</label>
    <type>Email</type>
</CustomField>