unpackaged/main/default/objects/Contact/fields/Additional_E_Mail__c.field-meta.xml
<CustomField>
    <fullName>Additional_E_Mail__c</fullName>
    <label>Additional E-Mail</label>
    <type>Email</type>
</CustomField>