unpackaged/main/default/objects/Contact/fields/AffiniPay_VT__c.field-meta.xml
<CustomField>
    <fullName>AffiniPay_VT__c</fullName>
    <externalId>true</externalId>
    <label>AffiniPay VT</label>
    <length>255</length>
    <type>Text</type>
</CustomField>