unpackaged/main/default/objects/Contact/fields/Archived_Date__c.field-meta.xml
<CustomField>
    <fullName>Archived_Date__c</fullName>
    <inlineHelpText>Date that the Contact (User) was archived in the AppFolio Property Manager or MyCase app.</inlineHelpText>
    <label>Archived Date</label>
    <type>Date</type>
</CustomField>