unpackaged/main/default/objects/Contact/fields/Archived_User__c.field-meta.xml
<CustomField>
    <fullName>Archived_User__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Checked if the Contact (User) is archived in the AppFolio Property Manager or MyCase app.</inlineHelpText>
    <label>Archived User</label>
    <type>Checkbox</type>
</CustomField>