unpackaged/main/default/objects/Contact/fields/Area_Code__c.field-meta.xml
<CustomField>
    <fullName>Area_Code__c</fullName>
    <formula>IF(BEGINS(Phone,&quot;(&quot;)&amp;&amp; LEN(Phone)&gt;= 12,MID(Phone,2,3), 
IF(BEGINS(Phone,&quot;+1(&quot;)&amp;&amp; LEN(Phone) &gt;= 14,MID(Phone,4,3), 
IF(BEGINS(Phone,&quot;+1&quot;)&amp;&amp; LEN(Phone)&gt;= 12,MID(Phone,3,3), 
IF(LEN(Phone)=10,LEFT(Phone, 3), 
IF(LEN(Phone)=12&amp;&amp;CONTAINS(Phone, &quot;-&quot;),LEFT(Phone,3), &#39;&#39; 
)))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Area Code</label>
    <type>Text</type>
</CustomField>