unpackaged/main/default/objects/Contact/fields/Assign_to_Group__c.field-meta.xml
<CustomField>
    <fullName>Assign_to_Group__c</fullName>
    <label>Assign to Group</label>
    <length>255</length>
    <type>Text</type>
</CustomField>