unpackaged/main/default/objects/Contact/fields/Bizible_Campaign_Text__c.field-meta.xml
<CustomField>
    <fullName>Bizible_Campaign_Text__c</fullName>
    <formula>bizible2__Ad_Campaign_Name_FT__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Bizible Campaign Text</label>
    <type>Text</type>
</CustomField>