unpackaged/main/default/objects/Contact/fields/Bypass_Duplicate_Rules__c.field-meta.xml
<CustomField>
    <fullName>Bypass_Duplicate_Rules__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checked to force creation of duplicate contact when converting new account for MyCase</description>
    <label>Bypass Duplicate Rules</label>
    <type>Checkbox</type>
</CustomField>