unpackaged/main/default/objects/Contact/fields/Bypass_Duplicate_Rules_on_Create__c.field-meta.xml
<CustomField>
    <fullName>Bypass_Duplicate_Rules_on_Create__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Bypass Duplicate Rules on Create</label>
    <type>Checkbox</type>
</CustomField>