unpackaged/main/default/objects/Contact/fields/CASEpeer_Marketing_Engagement__c.field-meta.xml
<CustomField>
    <fullName>CASEpeer_Marketing_Engagement__c</fullName>
    <label>CASEpeer Marketing Score</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>