unpackaged/main/default/objects/Contact/fields/Chargeback_POC__c.field-meta.xml
<CustomField>
    <fullName>Chargeback_POC__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field designates whether the contact is the point of contact to address chargebacks for our Payment Platform (MyCase and AffiniPay)</description>
    <inlineHelpText>Contact for chargebacks.</inlineHelpText>
    <label>Chargeback POC</label>
    <type>Checkbox</type>
</CustomField>