unpackaged/main/default/objects/Contact/fields/Contact_Email_Domain__c.field-meta.xml
<CustomField>
    <fullName>Contact_Email_Domain__c</fullName>
    <inlineHelpText>Flow will parse the Email Domain from Contact: Email</inlineHelpText>
    <label>Contact Email Domain</label>
    <length>255</length>
    <type>Text</type>
</CustomField>