unpackaged/main/default/objects/Contact/fields/Contact_Full_Name__c.field-meta.xml
<CustomField>
    <fullName>Contact_Full_Name__c</fullName>
    <formula>FirstName &amp;&#39; &#39;&amp;  LastName</formula>
    <label>Contact Full Name</label>
    <type>Text</type>
</CustomField>