unpackaged/main/default/objects/Contact/fields/Contact_Link__c.field-meta.xml
<CustomField>
    <fullName>Contact_Link__c</fullName>
    <formula>&quot;https://mycasetrial.lightning.force.com/&quot; &amp; Id</formula>
    <label>Contact Link</label>
    <type>Text</type>
</CustomField>