unpackaged/main/default/objects/Contact/fields/Contact_Owner_Formula__c.field-meta.xml
<CustomField>
    <fullName>Contact_Owner_Formula__c</fullName>
    <description>R166466</description>
    <formula>Owner.FirstName &amp; &quot; &quot; &amp; Owner.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contact Owner Formula</label>
    <type>Text</type>
</CustomField>