unpackaged/main/default/objects/Contact/fields/Create_Person_Master_ID__c.field-meta.xml
<CustomField>
    <fullName>Create_Person_Master_ID__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Create Person Master ID</label>
    <type>Checkbox</type>
</CustomField>