unpackaged/main/default/objects/Contact/fields/Created_By_Process__c.field-meta.xml
<CustomField>
    <fullName>Created_By_Process__c</fullName>
    <inlineHelpText>Custom Automation process that created the contact. Used to troubleshoot if contacts are being created incorrectly.</inlineHelpText>
    <label>Created By Process</label>
    <length>255</length>
    <type>Text</type>
</CustomField>