unpackaged/main/default/objects/Contact/fields/Created_by_Role__c.field-meta.xml
<CustomField>
    <fullName>Created_by_Role__c</fullName>
    <description>R177812</description>
    <formula>CreatedBy.UserRole.Name</formula>
    <label>Created by Role</label>
    <type>Text</type>
</CustomField>