unpackaged/main/default/objects/Contact/fields/cRO1__c.field-meta.xml
<CustomField>
    <fullName>cRO1__c</fullName>
    <label>cRO1</label>
    <length>100</length>
    <type>Text</type>
</CustomField>