unpackaged/main/default/objects/Contact/fields/Current_Accounting_Solution__c.field-meta.xml
<CustomField>
    <fullName>Current_Accounting_Solution__c</fullName>
    <label>Current Accounting Solution</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Current_Accounting_Solution</valueSetName>
    </valueSet>
</CustomField>