unpackaged/main/default/objects/Contact/fields/Current_Payments_Solution__c.field-meta.xml
<CustomField>
    <fullName>Current_Payments_Solution__c</fullName>
    <label>Current Payments Solution</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Current_Payments_Solution</valueSetName>
    </valueSet>
</CustomField>