unpackaged/main/default/objects/Contact/fields/Days_Since_Last_Activity__c.field-meta.xml
<CustomField>
    <fullName>Days_Since_Last_Activity__c</fullName>
    <formula>IF( 
OR( 
TODAY() - LastActivityDate &lt; 0,
ISBLANK(LastActivityDate)), 0, 

TODAY() - LastActivityDate)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Days Since Last Activity</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>