unpackaged/main/default/objects/Contact/fields/Days_Since_Last_Login__c.field-meta.xml
<CustomField>
    <fullName>Days_Since_Last_Login__c</fullName>
    <formula>NOW() - Last_Login__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Days Since Last Login</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>