unpackaged/main/default/objects/Contact/fields/Demo_Time__c.field-meta.xml
<CustomField>
    <fullName>Demo_Time__c</fullName>
    <description>Time of the day lead or contact requested a demo</description>
    <inlineHelpText>Time of the day lead or contact requested a demo</inlineHelpText>
    <label>Demo Time</label>
    <length>255</length>
    <type>Text</type>
</CustomField>