unpackaged/main/default/objects/Contact/fields/Disable_2_Factor_Authentication__c.field-meta.xml
<CustomField>
    <fullName>Disable_2_Factor_Authentication__c</fullName>
    <description>R177616</description>
    <formula>IF(NOT(ISBLANK(MC_Login_ID__c)),

HYPERLINK(&quot;https://auth.mycase.com/tfa_sessions?login_id=&quot; &amp; MC_Login_ID__c , &quot;Click To Disable&quot; ),
&quot;&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Disable 2 Factor Authentication?</label>
    <type>Text</type>
</CustomField>