unpackaged/main/default/objects/Contact/fields/Disqualified_Reason__c.field-meta.xml
<CustomField>
    <fullName>Disqualified_Reason__c</fullName>
    <label>Disqualified Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Disqualified_Reasons</valueSetName>
    </valueSet>
</CustomField>