unpackaged/main/default/objects/Contact/fields/Do_Not_Call_Picklist__c.field-meta.xml
<CustomField>
    <fullName>Do_Not_Call_Picklist__c</fullName>
    <description>SalesVue cannot update checkboxes, but they can update Picklists, so I have added this picklist to create a workflow to update the contact record.</description>
    <label>Do Not Call Picklist</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>True</fullName>
            </value>
            <value>
                <fullName>False</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>