unpackaged/main/default/objects/Contact/fields/Do_Not_Send_survey__c.field-meta.xml
<CustomField>
    <fullName>Do_Not_Send_survey__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Do Not Send survey</label>
    <type>Checkbox</type>
</CustomField>