unpackaged/main/default/objects/Contact/fields/Docketwise_Marketing_Engagement__c.field-meta.xml
<CustomField>
    <fullName>Docketwise_Marketing_Engagement__c</fullName>
    <label>Docketwise Marketing Score</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>