unpackaged/main/default/objects/Contact/fields/Event_Brands__c.field-meta.xml
<CustomField>
    <fullName>Event_Brands__c</fullName>
    <description>Brands a Lead has expressed interest in at an event.</description>
    <label>Event Brands</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Brands</valueSetName>
    </valueSet>
</CustomField>