unpackaged/main/default/objects/Contact/fields/Firm_Name_Keyword__c.field-meta.xml
<CustomField>
    <fullName>Firm_Name_Keyword__c</fullName>
    <formula>IF( 
OR(
CONTAINS( Account.Name, &quot;Law&quot;),
CONTAINS( Account.Name, &quot;Firm&quot;),
CONTAINS( Account.Name, &quot;Attorney&quot;),
CONTAINS( Account.Name, &quot;Legal&quot;),
CONTAINS( Account.Name, &quot;Office&quot;),
CONTAINS( Account.Name, &quot;Mediation&quot;),
CONTAINS( Account.Name, &quot;Lawyer&quot;),
CONTAINS( Account.Name, &quot;law&quot;),
CONTAINS( Account.Name, &quot;firm&quot;),
CONTAINS( Account.Name, &quot;attorney&quot;),
CONTAINS( Account.Name, &quot;legal&quot;),
CONTAINS( Account.Name, &quot;office&quot;),
CONTAINS( Account.Name, &quot;lawyer&quot;)
),

TRUE, FALSE)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Firm Name Keyword</label>
    <type>Checkbox</type>
</CustomField>