unpackaged/main/default/objects/Contact/fields/First_MQL_Score__c.field-meta.xml
<CustomField>
    <fullName>First_MQL_Score__c</fullName>
    <description>This is the Lead or Contact’s score at the time they first became an MQL.</description>
    <label>First MQL Score</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>