unpackaged/main/default/objects/Contact/fields/First_MQL_Status__c.field-meta.xml
<CustomField>
    <fullName>First_MQL_Status__c</fullName>
    <label>First MQL Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>MQL_Status</valueSetName>
    </valueSet>
</CustomField>