unpackaged/main/default/objects/Contact/fields/First_MQL_Type__c.field-meta.xml
<CustomField>
    <fullName>First_MQL_Type__c</fullName>
    <description>This is the type of activity that resulted in the Lead or Contact becoming an MQL. Most of these activities correspond to marketing forms, except for “Score Threshold” which corresponds to a person meeting a specific behavioral and demographic score.</description>
    <label>First MQL Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>MQL_Type</valueSetName>
    </valueSet>
</CustomField>