unpackaged/main/default/objects/Contact/fields/Forecasted__c.field-meta.xml
<CustomField>
    <fullName>Forecasted__c</fullName>
    <description>This is the forecasted number of software users, as estimated by Sales during the selling process. This is mapped from Lead to Opportunity upon conversion.</description>
    <label>Forecasted Users</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>