unpackaged/main/default/objects/Contact/fields/Form_Comments__c.field-meta.xml
<CustomField>
    <fullName>Form_Comments__c</fullName>
    <description>Custom field for collecting comments on Marketo forms</description>
    <label>Form Comments</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>