unpackaged/main/default/objects/Contact/fields/Full_Name__c.field-meta.xml
<CustomField>
    <fullName>Full_Name__c</fullName>
    <description>For clickable link on the related list of AssetContact junction object - created for R1914926</description>
    <formula>HYPERLINK(Id ,  Contact_Full_Name__c )</formula>
    <label>Full Name</label>
    <type>Text</type>
</CustomField>