unpackaged/main/default/objects/Contact/fields/Inbound_Request_Brand__c.field-meta.xml
<CustomField>
    <fullName>Inbound_Request_Brand__c</fullName>
    <description>This is populated by Marketo and is used to trigger Inbound Request records in Salesforce, which are used in attribution reporting.</description>
    <label>Inbound Request Brand</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Brands</valueSetName>
    </valueSet>
</CustomField>