unpackaged/main/default/objects/Contact/fields/Inbound_Request_Status__c.field-meta.xml
<CustomField>
    <fullName>Inbound_Request_Status__c</fullName>
    <label>Inbound Request Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>MQL_Status</valueSetName>
    </valueSet>
</CustomField>