unpackaged/main/default/objects/Contact/fields/Intercom_ID__c.field-meta.xml
<CustomField>
    <fullName>Intercom_ID__c</fullName>
    <externalId>true</externalId>
    <label>Intercom ID</label>
    <length>50</length>
    <type>Text</type>
</CustomField>