unpackaged/main/default/objects/Contact/fields/Intercom_Sync__c.field-meta.xml
<CustomField>
    <fullName>Intercom_Sync__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Intercom Sync</label>
    <type>Checkbox</type>
</CustomField>