unpackaged/main/default/objects/Contact/fields/Interested_in_LPM__c.field-meta.xml
<CustomField>
    <fullName>Interested_in_LPM__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Interested in LPM</label>
    <type>Checkbox</type>
</CustomField>