unpackaged/main/default/objects/Contact/fields/Interested_in_Template_Dev_Services__c.field-meta.xml
<CustomField>
    <fullName>Interested_in_Template_Dev_Services__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Interested in Template Dev Services</label>
    <type>Checkbox</type>
</CustomField>