unpackaged/main/default/objects/Contact/fields/Last_Assigned_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Assigned_Date__c</fullName>
    <label>Last Assigned Date</label>
    <type>DateTime</type>
</CustomField>