unpackaged/main/default/objects/Contact/fields/Last_Assigned_Owner_Role__c.field-meta.xml
<CustomField>
    <fullName>Last_Assigned_Owner_Role__c</fullName>
    <label>Last Assigned Owner Role</label>
    <length>255</length>
    <type>Text</type>
</CustomField>