unpackaged/main/default/objects/Contact/fields/Last_Login__c.field-meta.xml
<CustomField>
    <fullName>Last_Login__c</fullName>
    <inlineHelpText>Last Login Date/Time of AppFolio Property Manager, MyCase, or Rentlinx users synced from respective app.</inlineHelpText>
    <label>Last Login</label>
    <type>DateTime</type>
</CustomField>