unpackaged/main/default/objects/Contact/fields/Last_MQL_Brand__c.field-meta.xml
<CustomField>
    <fullName>Last_MQL_Brand__c</fullName>
    <description>This is the brand that generated the MQL.</description>
    <label>Last MQL Brand</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Brands</valueSetName>
    </valueSet>
</CustomField>