unpackaged/main/default/objects/Contact/fields/Last_MQL_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_MQL_Date__c</fullName>
    <description>This is the date/time that the Lead or Contact last became an MQL.</description>
    <label>Last MQL Date</label>
    <type>DateTime</type>
</CustomField>