unpackaged/main/default/objects/Contact/fields/Last_Survey_Sent__c.field-meta.xml
<CustomField>
    <fullName>Last_Survey_Sent__c</fullName>
    <description>R165324</description>
    <label>Last Survey Sent</label>
    <type>Date</type>
</CustomField>