unpackaged/main/default/objects/Contact/fields/Lead_Filter_Outcome__c.field-meta.xml
<CustomField>
    <fullName>Lead_Filter_Outcome__c</fullName>
    <description>Global picklist for leads and contacts to populate the filter outcome from automated lead vetting</description>
    <label>Lead Filter Outcome</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Lead_Filter_Outcome</valueSetName>
    </valueSet>
</CustomField>