unpackaged/main/default/objects/Contact/fields/Lead_Status__c.field-meta.xml
<CustomField>
    <fullName>Lead_Status__c</fullName>
    <inlineHelpText>Populated via Lead Conversion. If converted without an Opp, &quot;Known&quot;. Otherwise, Lead Status.</inlineHelpText>
    <label>Lead Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>