unpackaged/main/default/objects/Contact/fields/Lead_Vetting_Outcome__c.field-meta.xml
<CustomField>
    <fullName>Lead_Vetting_Outcome__c</fullName>
    <description>Reason lead was not routed from automated vetting</description>
    <label>Lead Vetting Outcome</label>
    <length>255</length>
    <type>Text</type>
</CustomField>