unpackaged/main/default/objects/Contact/fields/Lead_Workflow__c.field-meta.xml
<CustomField>
    <fullName>Lead_Workflow__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Created for R152223 

DO NOT EDIT OR CHANGE FIELD, PART OF MQL LEAD CONVERSION PROCESS 
SEE FOLLOWING WORKFLOW RULE 
Update Lead Created Date Field Step 1 
https://cs42.salesforce.com/01Q560000004NEI

Used in Process
Update Contact MQL Info From Lead Convert</description>
    <label>Lead Workflow</label>
    <type>Checkbox</type>
</CustomField>