unpackaged/main/default/objects/Contact/fields/Lead_Workflow_Most_Recent_MQL__c.field-meta.xml
<CustomField>
    <fullName>Lead_Workflow_Most_Recent_MQL__c</fullName>
    <description>Created for R152223 

DO NOT EDIT OR CHANGE FIELD, PART OF MQL LEAD CONVERSION PROCESS 
SEE FOLLOWING WORKFLOW RULE 
Update Lead Created Date Field Step 2 
https://cs42.salesforce.com/01Q560000004NED

Used in Process 
Update Contact MQL Info From Lead Convert</description>
    <label>Lead Workflow Most Recent MQL</label>
    <type>DateTime</type>
</CustomField>