unpackaged/main/default/objects/Contact/fields/Lead_Workflow_Original_MQL_Program__c.field-meta.xml
<CustomField>
    <fullName>Lead_Workflow_Original_MQL_Program__c</fullName>
    <description>Created by R152785</description>
    <label>Lead Workflow Original MQL Program</label>
    <length>50</length>
    <type>Text</type>
</CustomField>