unpackaged/main/default/objects/Contact/fields/Legacy_Email_Addrees__c.field-meta.xml
<CustomField>
    <fullName>Legacy_Email_Addrees__c</fullName>
    <label>Legacy Email Addrees</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>