unpackaged/main/default/objects/Contact/fields/Legacy_Id__c.field-meta.xml
<CustomField>
    <fullName>Legacy_Id__c</fullName>
    <externalId>true</externalId>
    <label>Legacy ID</label>
    <length>18</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>