unpackaged/main/default/objects/Contact/fields/Legacy_Lead_Source__c.field-meta.xml
<CustomField>
    <fullName>Legacy_Lead_Source__c</fullName>
    <inlineHelpText>Displays the lead source value form the legacy system that created this record</inlineHelpText>
    <label>Legacy Lead Source</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Legacy Lead Source</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>